# acapy-revocation-demo

./: .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml  openapi.yml  output.txt  pyproject.toml
acapy-client/: pyproject.toml
acapy-client/acapy_client/api/revocation/: publish_revocations.py  revoke_credential.py
acapy-client/acapy_client/models/: did.py  indy_proof_request.py  taa_info.py  taa_result.py
acapy_revocation_demo/: __init__.py  __main__.py  agent.py  api.py  controller.py  onboarding.py  queue.py  scenarios.py
acapy_revocation_demo/controller/: __init__.py  api.py  connection.py  controller.py  credential_exchange.py  flows.py  invitation.py  mediation.py  presentation_exchange.py  queue.py  record.py  utils.py
configs/: holder.yml  issuer.yml
docker/: Dockerfile.demo
scripts/: generate-client.sh  process_swagger.py
tests/: conftest.py  test_agents.py
