[tool.poetry]
name = "acapy-revocation-demo"
version = "0.1.0"
description = "Demonstrate Indy AnonCreds revocation using ACA-Py"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
acapy-client = "0.7.3.post0"
aiohttp = "^3.8.1"
blessings = "^1.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^3.9.2"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
